--- a/public/css/player-theme.css
+++ b/public/css/player-theme.css
@@ -1,5 +1,5 @@
 .vjs-theme-forest {
-    --vjs-theme-forest--primary: #CB0C9F;
+    --vjs-theme-forest--primary: #C1262C;
     --vjs-theme-forest--secondary: #fff;
 }
 .vjs-theme-forest.vjs-big-play-button:focus,
