--- a/resources/sass/_variables-dark.scss
+++ b/resources/sass/_variables-dark.scss
@@ -81,7 +81,7 @@ $colors-alt: map-merge(
   $colors-alt
 );
 
-$primary-alt:       #cb0c9f !default;
+$primary-alt:       #C1262C !default;
 $secondary-alt:     #8392AB !default;
 $info-alt:          #17c1e8 !default;
 $success-alt:       #82d616 !default;
