--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -94,7 +94,7 @@ $colors: map-merge(
         $colors
 );
 
-$primary:       #cb0c9f !default;
+$primary:       #C1262C !default;
 $secondary:     #8392AB !default;
 $info:          #17c1e8 !default;
 $success:       #82d616 !default;
