--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -448,6 +448,12 @@ $text-gradient-bg-clip:       text !default;
 $text-gradient-text-fill:     transparent !default;
 $text-gradient-position:      relative !default;
 $text-gradient-zindex:        1 !default;
+$text-gradient-bg-primary:    linear-gradient(310deg, $primary-gradient, $primary-gradient-state) !default;
+$text-gradient-bg-info:       linear-gradient(310deg, #2152FF, #21D4FD) !default;
+$text-gradient-bg-success:    linear-gradient(310deg, #17AD37, #C1E823) !default;
+$text-gradient-bg-warning:    "" !default;
+$text-gradient-bg-danger:     linear-gradient(310deg, #D60808, #FF6690) !default;
+$text-gradient-bg-dark:     linear-gradient(310deg, #141727, #3A416F) !default;
 
 // Buttons + Forms
 //
