UPDATE | Color to green

--- a/resources/sass/_variables-dark.scss
+++ b/resources/sass/_variables-dark.scss
@@ -83,8 +83,8 @@ $colors-alt: map-merge(
 
 $primary-alt:       #C1262C !default;
 $secondary-alt:     #8392AB !default;
-$info-alt:          #17c1e8 !default;
-$success-alt:       #82d616 !default;
+$info-alt:          #ea0606 !default;
+$success-alt:       #ea0606 !default;
 $warning-alt:       #f53939 !default;
 $danger-alt:        #ea0606 !default;
 $light-alt:         $gray-500-alt !default;  // $gray-100-alt !default;
