--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -96,8 +96,8 @@ $colors: map-merge(
 
 $primary:       #C1262C !default;
 $secondary:     #8392AB !default;
-$info:          #17c1e8 !default;
-$success:       #82d616 !default;
+$info:          #ea0606 !default;
+$success:       #ea0606 !default;
 $warning:       #f53939 !default;
 $danger:        #ea0606 !default;
 $light:         $gray-200 !default;
